# local-py-dag-frameworks

./: .gitattributes  .gitignore  README.md
dagster/: .env  .gitignore  README.md  assets.py  requirements.txt  test.ipynb
dagster/.dagster/: dagster.yaml
dagster/data/raw/: 2025-03-01.xlsx
kedro/: .env  .gitignore  pyproject.toml  requirements.txt
kedro/data/raw/: 2025-04-02.xlsx  2025-05-03.xlsx
kedro/src/project/: helpers.py  parameters.yml  pipeline_registry.py  settings.py
kedro2/: .gitignore  README.md  pyproject.toml  test.ipynb
kedro2/src/project/: catalog.yml  pipeline_registry.py
luigi/: README.md  luigi.cfg  mixins.py  requirements.txt  tasks.py  test.ipynb
prefect/: .env  .gitignore  README.md  flow.py  helpers.py  requirements.txt  test.ipynb
prefect/data/raw/: 2025-03-01.xlsx
snakemake/: .gitignore  README.md  Snakefile  requirements.txt  test.ipynb
snakemake/scripts/: _helpers.py  clean_data.py  concat_data.py  convert_data.py  linear_regression.py
