[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11,<3.12"
name = "project"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro[jupyter]~=0.19.13",
    "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0",
    "kedro-viz>=6.7.0",
    "scikit-learn~=1.5.1",
    "seaborn~=0.12.1",
]

[tool.kedro]
package_name = "project"
project_name = "project"
kedro_init_version = "0.19.13"
tools = "[]"
example_pipeline = "False"
source_dir = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
